# hypher

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
bench/: Cargo.toml  bench.rs
patterns/: hyph-ca.tex  hyph-cs-sojka.tex  hyph-de-1996.tex  hyph-gl.tex  hyph-pt.tex  hyph-sq.tex
src/: lang.rs  lib.rs  tex.rs  trie.rs
tests/: generate.rs
